Fixed overflows

--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,14 @@
   }
 
   body {
-    background: rgb(37, 99, 235);
+    /* background: rgb(37, 99, 235);
     background: linear-gradient(
       0deg,
       rgba(37, 99, 235, 1) 0%,
       rgba(85, 200, 247, 1) 100%
-    );
+    ); */
     font-family: "Inter", sans-serif;
-    @apply text-gray-800 ;
+    @apply text-gray-800 md:bg-sky-500;
   }
 
   .outlined {
